# vyatta-anyfi-common

./: Makefile.am  README  README.md  configure.ac
debian/: README  changelog  control  copyright  lintian  rules
scripts/: vyatta-anyfi-keygen  vyatta-anyfi-stop-daemon
templates-op/generate/anyfi/: node.def
